<resources>
    <string name="app_name">Donute</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_motto">Helping those in need</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="yes_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="next">Next</string>

    <string name="name_c">NAME</string>
    <string name="name">Name</string>
    <string name="username_c">USERNAME</string>
    <string name="done">Done</string>
    <string name="email_c">EMAIL</string>
    <string name="email">Email</string>
    <string name="password_c">PASSWORD</string>
    <string name="con_password_c">CONFIRM PASSWORD</string>
    <string name="con_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="not_empty">Cannot be empty</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="email_not_valid">Not a valid email</string>
</resources>
