<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.dilan.donasi.mvp.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="@dimen/dimen_32dp"
                android:src="@drawable/back_white" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="42sp" />


            <LinearLayout
                android:id="@+id/et_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_52dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_c"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00ffffff"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorWhiteAlpha"
                        android:textCursorDrawable="@null" />
                </LinearLayout>

                <View
                    android:id="@+id/email_div"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhiteAlpha" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/password_c"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00ffffff"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorWhiteAlpha"
                        android:textCursorDrawable="@null" />
                </LinearLayout>

                <View
                    android:id="@+id/password_div"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhiteAlpha" />

                <TextView
                    android:id="@+id/con_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/con_password_c"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_con_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00ffffff"
                        android:hint="@string/con_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorWhiteAlpha"
                        android:textCursorDrawable="@null" />
                </LinearLayout>

                <View
                    android:id="@+id/con_password_div"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhiteAlpha" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_dark"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes_account"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:text="@string/sign_in_here"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
